--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: "."
 
 website:
-  title: "TRUELY YOUR NAME"
+  title: "Henry Socash DANL"
   navbar:
     pinned: true
     left:
